# self-host-cloud-agent

./: AGENTS.md  IDEA.md  README.md  pyproject.toml
src/self_host_cloud_agent/: __init__.py  app.py  cli.py  docker_manager.py  reverse_proxy.py  ssl_manager.py
tests/: test_self_host_cloud_agent.py
